test/asm/positive/key_shared_data_macro.asm
DEFINE shared 1

shared
A = shared

%MACRO shared
A = shared
D&A
%END

A = shared
shared