test/asm/negative/macro_key.asm
%MACRO invalid
A = invalid
%END

invalid
